Adding styleto home.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </ul>
             </section>
             <article>
-                <a href="http//:youtube.com">Enter</a>
+                <a href="/home.html">Enter</a>
             </article>
         </article>
         <footer>
