Adding lorem with style

--- a/home.html
+++ b/home.html
@@ -5,9 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>2020-3.PII</title>
         <link rel="stylesheet" href="css/mystyles.css">
+        
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <header>
+        <header id="id-example-one">
             <h1>
                 <a href="index.html">Header</a>
             </h1>
@@ -22,11 +24,18 @@
             </ol>
         </nav>
         <article>
-            <section>
-                <p>This is a paragraph</p>
+            <section class="text-one">
+                <i class="fa fa-cloud" style="font-size:36px;"></i>
+                <h2>Title one</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium laudantium in minima inventore ex optio! Labore, eveniet dignissimos itaque iure quod, recusandae fuga, quos voluptas repellat quam officiis nulla quisquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda possimus consequatur, delectus ipsam a odit tenetur nemo nam dolor animi explicabo officia illum amet atque hic fugiat sed, et quisquam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia quae, dolore obcaecati, est excepturi accusantium mollitia, vel facere tenetur cupiditate doloribus et quo quibusdam iusto ab! Voluptates qui facilis est.</p>
             </section>
-            <section>
-                <p>This is another paragraph</p>
+            <section id="id-example-one"> 
+                <h2>Title two</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi minima explicabo quidem quasi quibusdam iusto nobis, cumque natus. Quos, mollitia recusandae reprehenderit odit vitae dolor consequatur beatae dolore maxime dicta. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat sunt consequuntur velit vel quo minima, provident accusantium voluptas at ducimus reiciendis autem quod perferendis consectetur quibusdam sit! Voluptate, ipsa officiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos numquam molestiae minima omnis natus quibusdam minus aperiam, voluptatibus rem adipisci veniam vel neque. Amet dolorum quae minima aspernatur animi? Ratione!</p>
+            </section>
+            <section class="text-one">
+                <h2>Title three</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi minima explicabo quidem quasi quibusdam iusto nobis, cumque natus. Quos, mollitia recusandae reprehenderit odit vitae dolor consequatur beatae dolore maxime dicta. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat sunt consequuntur velit vel quo minima, provident accusantium voluptas at ducimus reiciendis autem quod perferendis consectetur quibusdam sit! Voluptate, ipsa officiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos numquam molestiae minima omnis natus quibusdam minus aperiam, voluptatibus rem adipisci veniam vel neque. Amet dolorum quae minima aspernatur animi? Ratione!</p>
             </section>
         </article>
         <footer>
